# agent-slides

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  deploy-website.yml  interop.yml  publish.yml  rebuild-visual-gate.yml  visual-diff.yml
landing/: index.html  style.css
landing/docs/: index.html
landing/docs/cli/: index.html
landing/docs/how-it-works/: index.html
landing/docs/skills/: index.html
landing/examples/: index.html
landing/examples/project-aurora/: index.html
landing/notes/: index.html
landing/notes/agent-dx/: index.html
landing/notes/context-budget/: index.html
landing/notes/orchestration/: index.html
landing/notes/seven-skills/: index.html
landing/notes/untrusted-input/: index.html
scripts/: package-skills.sh
skills/slides-audit/: SKILL.md
skills/slides-audit/references/: common-mistakes.md
skills/slides-build/: SKILL.md
skills/slides-build/references/: chart-patterns.md  common-mistakes.md  content-density.md  framework-patterns.md  layout-patterns.md  operations.md  process-patterns.md
skills/slides-critique/: SKILL.md
skills/slides-critique/references/: common-mistakes.md  storytelling.md
skills/slides-edit/: SKILL.md
skills/slides-extract/: SKILL.md
skills/slides-full/: SKILL.md
skills/slides-polish/: SKILL.md
src/slides_cli/: __init__.py  agentic.py  api.py  cli.py  errors.py  io.py  model.py  validator.py
src/slides_cli/schemas/: archetypes.schema.json  content_layout.schema.json  field_masks.json  (+1 more)
tests/: test_benchmark_script.py  test_cli.py  test_core.py  test_corpus_runner.py  test_interop_matrix.py  test_interop_xml.py  test_refactors.py  test_render_office_script.py  test_validation.py  test_visual_diff_script.py  test_workflow_regression.py
website/: 404.html  CNAME  base.css  home.css  index.html
website/docs/: index.html
website/examples/: index.html
website/notes/: index.html
(+24 files in other folders)
